--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "micro-webcruiter-from-api",
-  "description": "ldap auth microservice",
-  "version": "1.0.1",
+  "description": "Generate webcruiter rss from api",
+  "version": "1.0.2",
   "license": "MIT",
+  "private": true,
   "author": {
     "name": "Geir Gåsodden",
     "email": "geir.gasodden@pythonia.no",
@@ -10,14 +11,13 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=7.5.0"
+    "node": ">=7.8.0"
   },
   "scripts": {
-    "test": "standard && nsp check && tap --reporter=spec test/**/*.js",
-    "test-offline": "standard && tap --reporter=spec test/**/*.js",
-    "coverage": "tap test/**/*.js --coverage",
-    "coveralls": "tap --cov --coverage-report=lcov test/**/*.js && cat coverage/lcov.info | coveralls",
-    "setup": "npm install",
+    "test": "standard && nsp check && ava",
+    "test-offline": "standard && ava",
+    "coverage": "nyc ava",
+    "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
     "standard-fix": "standard --fix",
     "start": "micro",
     "now-deploy": "npm test && now --npm && now alias"
@@ -25,7 +25,9 @@
   "keywords": [
     "microservice",
     "micro",
-    "echo"
+    "rss",
+    "recruitments",
+    "Telemark fylkeskommune"
   ],
   "repository": {
     "type": "git",
@@ -34,19 +36,24 @@
   "bugs": {
     "url": "https://github.com/telemark/micro-webcruiter-from-api/issues"
   },
+  "homepage": "https://github.com/telemark/micro-webcruiter-from-api",
   "now": {
     "alias": [
       "recruitments.t-fk.win"
     ],
     "env": {
       "NODE_ENV": "production"
-    }
+    },
+    "type": "npm"
   },
   "devDependencies": {
+    "ava": "0.18.2",
+    "axios": "0.16.0",
     "coveralls": "2.13.0",
     "nsp": "2.6.3",
+    "nyc": "10.2.0",
     "standard": "9.0.2",
-    "tap": "10.3.1"
+    "test-listen": "1.0.1"
   },
   "dependencies": {
     "marked": "0.3.6",
