--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=7.8.0"
+    "node": ">=8.9.4"
   },
   "scripts": {
     "test": "standard && nsp check && ava",
@@ -20,7 +20,8 @@
     "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
     "standard-fix": "standard --fix",
     "start": "micro",
-    "now-deploy": "npm test && now --npm && now alias"
+    "deploy": "npm test && now && now alias",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "keywords": [
     "microservice",
@@ -31,12 +32,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/telemark/micro-webcruiter-from-api.git"
+    "url": "https://github.com/telemark-arkiv/micro-webcruiter-from-api.git"
   },
   "bugs": {
-    "url": "https://github.com/telemark/micro-webcruiter-from-api/issues"
+    "url": "https://github.com/telemark-arkiv/micro-webcruiter-from-api/issues"
   },
-  "homepage": "https://github.com/telemark/micro-webcruiter-from-api",
+  "homepage": "https://github.com/telemark-arkiv/micro-webcruiter-from-api#readme",
   "now": {
     "alias": [
       "recruitments.t-fk.win"
@@ -47,17 +48,17 @@
     "type": "npm"
   },
   "devDependencies": {
-    "ava": "0.19.1",
-    "axios": "0.16.2",
-    "coveralls": "2.13.1",
-    "nsp": "2.6.3",
-    "nyc": "11.0.3",
-    "standard": "10.0.2",
-    "test-listen": "1.0.1"
+    "ava": "0.24.0",
+    "axios": "0.17.1",
+    "coveralls": "3.0.0",
+    "nsp": "3.1.0",
+    "nyc": "11.4.1",
+    "standard": "10.0.3",
+    "test-listen": "1.1.0"
   },
   "dependencies": {
-    "marked": "0.3.6",
-    "micro": "7.3.3",
+    "marked": "0.3.12",
+    "micro": "9.1.0",
     "rss": "1.2.2",
     "valid-url": "1.0.9"
   }
